--- a/code/build.gradle
+++ b/code/build.gradle
@@ -9,10 +9,11 @@ repositories {
 
 dependencies {
     compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.8.10'
-    compile 'com.amazonaws:aws-java-sdk-lambda:1.11.93'
-    compile 'com.amazonaws:aws-lambda-java-core:1.1.0'
+    compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.1.0'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.98'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-iam', version: '1.11.98'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-api-gateway', version: '1.11.98'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.11.98'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
