Remove gradle and convert configs to maven

--- a/code/.gitignore
+++ b/code/.gitignore
@@ -23,11 +23,8 @@ $RECYCLE.BIN/
 *.orig
 *.patch
 
-# Gradle
-/build/
-.gradle/
-!/gradle/**/*.jar
-.settings/gradle/
+# Maven
+/target/
 
 # Eclipse
 .classpath
