--- a/code/pom.xml
+++ b/code/pom.xml
@@ -48,9 +48,24 @@
             <version>1.11.98</version>
         </dependency>
         <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-api-gateway</artifactId>
+            <version>1.11.98</version>
+        </dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.10</version>
+        </dependency>
+
+
+
+
+
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.11</version>
         </dependency>
     </dependencies>
 
@@ -81,7 +96,7 @@
                             <mainClass>com.demo.URLSample</mainClass>
                         </manifest>
                     </archive>
-
+                    <finalName>jcs_lambda</finalName>
                 </configuration>
                 <executions>
                     <execution>
