--- a/code/pom.xml
+++ b/code/pom.xml
@@ -57,7 +57,12 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.8.10</version>
+            <version>${aspectj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
         </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
@@ -89,14 +94,13 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
-                <version>1.4</version>
+                <version>1.10</version>
                 <configuration>
                     <source>${javaVersion}</source>
                     <target>${javaVersion}</target>
                     <complianceLevel>${javaVersion}</complianceLevel>
                     <verbose>true</verbose>
                     <weaveWithAspectsInMainSourceFolder>true</weaveWithAspectsInMainSourceFolder>
-                    <!-- <excludes> <exclude>**/StateEventAspect.java</exclude> </excludes> -->
                 </configuration>
                 <executions>
                     <execution>
