--- a/code/helpers/pom.xml
+++ b/code/helpers/pom.xml
@@ -2,97 +2,28 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ch.uzh.ifi.seal</groupId>
-    <artifactId>jcs_lambda</artifactId>
+    <groupId>com</groupId>
+    <artifactId>example</artifactId>
     <version>0.0.1</version>
-    <name>JCS Lambda</name>
+    <name>JCS Lambda Example Project</name>
 
     <properties>
         <javaVersion>1.8</javaVersion>
         <aspectj.version>1.8.10</aspectj.version>
-        <aws.version>1.11.119</aws.version>
-        <maven.test.skip>true</maven.test.skip>
     </properties>
+
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.maven.shared</groupId>
-            <artifactId>maven-invoker</artifactId>
-            <version>2.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>1.7.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-lambda-java-core</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-lambda</artifactId>
-            <version>${aws.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-s3</artifactId>
-            <version>${aws.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-iam</artifactId>
-            <version>${aws.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-api-gateway</artifactId>
-            <version>${aws.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-sqs</artifactId>
-            <version>${aws.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-logs</artifactId>
-            <version>${aws.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>${aspectj.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>${aspectj.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.reflections</groupId>
-            <artifactId>reflections</artifactId>
-            <version>0.9.11</version>
-        </dependency>
-
-        <dependency>
-            <scope>test</scope>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>ch.uzh.ifi.seal</groupId>
+            <artifactId>jcs_lambda</artifactId>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
@@ -126,7 +57,6 @@
                 </executions>
             </plugin>
 
-            <!-- Specifying that aspectJ should weave aspects in compile-time -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
@@ -135,14 +65,17 @@
                     <source>${javaVersion}</source>
                     <target>${javaVersion}</target>
                     <complianceLevel>${javaVersion}</complianceLevel>
-                    <verbose>true</verbose>
+<!--                    <verbose>true</verbose>-->
+                    <aspectLibraries>
+                        <aspectLibrary>
+                            <groupId>ch.uzh.ifi.seal</groupId>
+                            <artifactId>jcs_lambda</artifactId>
+                        </aspectLibrary>
+                    </aspectLibraries>
                 </configuration>
                 <executions>
                     <execution>
                         <phase>process-sources</phase>
-                        <configuration>
-                            <XnoInline>true</XnoInline>
-                        </configuration>
                         <goals>
                             <goal>compile</goal>
                             <goal>test-compile</goal>
