--- a/code/evaluation/quantitative/5.2_5.8_matrix_multiplication_jCloudScale_Lambda/pom.xml
+++ b/code/evaluation/quantitative/5.2_5.8_matrix_multiplication_jCloudScale_Lambda/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jcs_lambda</groupId>
+    <groupId>com</groupId>
     <artifactId>matrix_multiplication</artifactId>
     <version>0.0.1</version>
     <name>JCS Lambda Matrix Multiplication</name>
