--- a/code/evaluation/quantitative/5.2_5.8_matrix_multiplication_jCloudScale_Lambda/pom.xml
+++ b/code/evaluation/quantitative/5.2_5.8_matrix_multiplication_jCloudScale_Lambda/pom.xml
@@ -95,6 +95,15 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <mainClass>com.matrix_multiplication.Calculator</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
